bug fix spacing home page banner

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -106,8 +106,8 @@ body{
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    padding-top: 90px;
-    margin-top: 50px;
+    padding-top: 45px;
+    margin-top: 25px;
 }
 
 .header{
